[gd_scene load_steps=6 format=3 uid="uid://crfbi8kp3v8qp"]

[ext_resource type="Script" path="res://src/main/bodies/additional/basic/normal_body.gd" id="1_w5vn2"]

[sub_resource type="QuadMesh" id="QuadMesh_hn3oy"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmn56"]
custom_solver_bias = 1.0
size = Vector2(32, 32)

[sub_resource type="QuadMesh" id="QuadMesh_mn10n"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ds2wx"]
size = Vector2(15, 15)

[node name="NormalBody" type="RigidBody2D"]
input_pickable = true
mass = 0.01
can_sleep = false
continuous_cd = 2
script = ExtResource("1_w5vn2")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource("QuadMesh_hn3oy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
z_as_relative = false
rotation = -1.5708
shape = SubResource("RectangleShape2D_hmn56")
debug_color = Color(0.47451, 0.419608, 0, 0.419608)

[node name="Select" type="MeshInstance2D" parent="."]
visible = false
modulate = Color(0.752941, 0.764706, 0.768627, 1)
show_behind_parent = true
mesh = SubResource("QuadMesh_mn10n")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_priority = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ds2wx")
