[gd_scene load_steps=11 format=3 uid="uid://dinm4ywrs41ww"]

[ext_resource type="Script" path="res://src/main/bodies/additional/basic/normal_body.gd" id="1_63etg"]
[ext_resource type="PackedScene" uid="uid://bf36buciyowrj" path="res://src/main/bodies/additional/components/save_component.tscn" id="2_exxfr"]
[ext_resource type="PackedScene" uid="uid://cxvdofvihr3oi" path="res://src/main/bodies/additional/components/input_component.tscn" id="3_0ei2d"]
[ext_resource type="PackedScene" uid="uid://bs410o4h85bjo" path="res://src/main/bodies/additional/pin_point/pin_point.tscn" id="4_brbf5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_a1fao"]
friction = 0.4

[sub_resource type="QuadMesh" id="QuadMesh_i6ehh"]
size = Vector2(56, 40)

[sub_resource type="QuadMesh" id="QuadMesh_0e7jl"]
size = Vector2(12, 5)

[sub_resource type="QuadMesh" id="QuadMesh_kstnr"]
size = Vector2(65, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mryxb"]
size = Vector2(45, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4elv"]
custom_solver_bias = 1.0
size = Vector2(56, 40)

[node name="BlockBody" type="RigidBody2D"]
process_priority = 2
process_physics_priority = 2
z_index = 30
disable_mode = 2
collision_priority = 5.0
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_a1fao")
can_sleep = false
freeze_mode = 1
continuous_cd = 2
script = ExtResource("1_63etg")
properties = {
"mass": 1.0
}
body_scene_path = "res://src/main/bodies/block_body/block_body.tscn"

[node name="SaveComponent" parent="." node_paths=PackedStringArray("save_nodes") instance=ExtResource("2_exxfr")]
save_nodes = [NodePath(".."), NodePath("../PinPoint"), NodePath("../PinPoint2")]

[node name="InputComponent" parent="." node_paths=PackedStringArray("input_body") instance=ExtResource("3_0ei2d")]
input_body = NodePath("..")
hold_type = 1
is_rotatable = true

[node name="Visuals" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Visuals"]
modulate = Color(0.219608, 0.592157, 0.992157, 1)
mesh = SubResource("QuadMesh_i6ehh")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Visuals"]
modulate = Color(0.619608, 0.796078, 0.996078, 1)
position = Vector2(34, 0)
mesh = SubResource("QuadMesh_0e7jl")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="Visuals"]
modulate = Color(0.619608, 0.796078, 0.996078, 1)
position = Vector2(-34, 0)
mesh = SubResource("QuadMesh_0e7jl")

[node name="Select" type="MeshInstance2D" parent="Visuals"]
visible = false
modulate = Color(0.752941, 0.764706, 0.768627, 1)
show_behind_parent = true
mesh = SubResource("QuadMesh_kstnr")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_priority = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mryxb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j4elv")

[node name="PinPoint" parent="." node_paths=PackedStringArray("main_body") instance=ExtResource("4_brbf5")]
modulate = Color(0, 0.803922, 0.447059, 1)
position = Vector2(-43, 0)
main_body = NodePath("..")
disconnect_on_hold = true

[node name="InputComponent" parent="PinPoint" node_paths=PackedStringArray("input_body") instance=ExtResource("3_0ei2d")]
input_body = NodePath("../..")
hold_type = 2

[node name="PinPoint2" parent="." node_paths=PackedStringArray("main_body") instance=ExtResource("4_brbf5")]
modulate = Color(0, 0.803922, 0.447059, 1)
position = Vector2(43, 0)
main_body = NodePath("..")
disconnect_on_hold = true

[node name="InputComponent" parent="PinPoint2" node_paths=PackedStringArray("input_body") instance=ExtResource("3_0ei2d")]
input_body = NodePath("../..")
hold_type = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="renamed" from="PinPoint2" to="." method="_on_renamed"]
